--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,15 @@ body {
   display: none !important;
 }
 
+.hero {
+}
+.hero__title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 1;
+  text-shadow: 0px 0px 20px rgb(17, 70, 80);
+}
+
 .weather {
   max-width: min-content;
   padding: 30px 20px;
@@ -41,6 +50,11 @@ body {
 
   background-color: #fff;
   border-radius: 50px;
+
+  transition: opacity ease-in 0.2s;
+}
+.form:hover {
+  opacity: 0.8;
 }
 
 .form__input {
