--- a/css/main.css
+++ b/css/main.css
@@ -55,12 +55,8 @@ body {
 }
 .form:hover {
   opacity: 0.8;
-}
-
-.form__input {
-  color: black;
-  width: 100%;
-  margin-right: 10px;
+-radius: 50px;
+-right: 10px;
 }
 
 .form__input::placeholder {
